[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
itertools = "0.14"
num = "0.4.3"
regex = "1.12"
reqwest = { version = "0.12", features = ["blocking"] }
